--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,746</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,227</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">StockExchange.BaseStock</td><td><a href="#m0">openingAboutNSE</a></td><td rowspan="1">1760889637083</td><td rowspan="1">10613</td></tr><tr class="passedeven"><td><a href="#m1">openingInvest</a></td><td rowspan="1">1760889657284</td><td rowspan="1">9556</td></tr><tr class="passedeven"><td><a href="#m2">openingList</a></td><td rowspan="1">1760889647713</td><td rowspan="1">9565</td></tr><tr class="passedeven"><td><a href="#m3">testFailExample</a></td><td rowspan="1">1760889666844</td><td rowspan="1">1700</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Learn.BestLearn</td><td><a href="#m0">checkAuto</a></td><td rowspan="1">1760975637117</td><td rowspan="1">22242</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">StockExchange.BaseStock#openingAboutNSE</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">StockExchange.BaseStock#openingInvest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">StockExchange.BaseStock#openingList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">StockExchange.BaseStock#testFailExample</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Learn.BestLearn#checkAuto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
